--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,5 +6,10 @@
         android:title="Search"
         android:icon="@android:drawable/ic_search_category_default"
         app:showAsAction="always"/>
+    <item
+        android:id="@+id/action_filter"
+        android:title="Sort"
+        app:showAsAction="always"
+        android:icon="@android:drawable/ic_dialog_dialer"/>
 
 </menu>
