--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/fav"
+        android:title="Favourite"
+        app:showAsAction="always"
+        android:icon="@drawable/heart_on"/>
+    <item
         android:id="@+id/action_search"
         android:title="Search"
         android:icon="@android:drawable/ic_search_category_default"
