--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -22,10 +22,10 @@
 
     <TextView
         android:id="@+id/mov_name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/mov_img"
-        android:layout_alignParentEnd="true"
         android:text="Movie Name"
         android:layout_marginLeft="15dp"
         android:layout_marginBottom="35dp"
@@ -60,6 +60,28 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:paddingLeft="15dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/ratingtxt"
+                android:text="Average Rating:"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@id/rating"
+                android:layout_alignBaseline="@id/rating"
+                android:layout_alignParentRight="true"/>
+            <TextView
+                android:id="@+id/releasedDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/rating"
+                android:text="Released date:"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@id/rating"
+                android:textStyle="bold"
+                android:layout_marginTop="5dp"
+                />
 
         <TextView
             android:layout_width="match_parent"
@@ -69,7 +91,7 @@
             android:textSize="20sp"
             android:textColor="@android:color/black"
             android:textStyle="bold"
-            android:layout_below="@id/rating"
+            android:layout_below="@id/releasedDate"
             android:fontFamily="sans-serif-black"
             android:paddingLeft="15dp"
             android:paddingTop="15dp"/>
@@ -103,4 +125,4 @@
 
 </RelativeLayout>
 
-</LinearLayout>
+</ScrollView>
