--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -141,8 +141,7 @@
         android:id="@+id/youtube_recycler"
         android:layout_width="match_parent"
         android:layout_below="@id/cardView2"
-        android:layout_height="match_parent"
-        android:clipToPadding="false"
+        android:layout_height="wrap_content"
         android:padding="15dp"/>
 
 </RelativeLayout>
