--- a/app/src/main/res/layout/youtube.xml
+++ b/app/src/main/res/layout/youtube.xml
@@ -7,10 +7,10 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:elevation="100dp"
-        android:paddingLeft="15dp"
-        android:paddingTop="15dp"
-        android:paddingRight="15dp"
+        app:cardElevation="12dp"
+        android:paddingLeft="5dp"
+        android:paddingTop="2dp"
+        android:paddingRight="5dp"
         android:layout_height="wrap_content"
         app:cardCornerRadius="15dp">
 
@@ -25,7 +25,6 @@
                 android:layout_width="90dp"
                 android:src="@android:drawable/ic_media_play"
                 android:adjustViewBounds="true"
-                android:scaleType="fitXY"
                 android:contentDescription="Image"
                 android:layout_height="90dp"
                 android:background="@android:color/background_dark"
@@ -33,13 +32,13 @@
 
             <TextView
                 android:id="@+id/trailerName"
+                android:layout_marginLeft="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:text="@string/jack_reacher"
                 android:textSize="18sp"
-                android:layout_toRightOf="@+id/youtube_image"
-                android:paddingLeft="15dp"/>
+                android:layout_toRightOf="@+id/youtube_image" />
 
 
 
