--- a/app/src/main/res/layout/movie_disp.xml
+++ b/app/src/main/res/layout/movie_disp.xml
@@ -3,11 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:elevation="100dp"
         android:paddingLeft="15dp"
         android:paddingTop="15dp"
